// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAlignmentFlexStyles Get a correct alignment flex styles 1`] = `
{
  "general": {
    "justify-content": "flex-end",
  },
  "l": {
    "justify-content": "flex-start",
  },
  "m": {
    "justify-content": "flex-end",
  },
  "s": {
    "justify-content": "flex-start",
  },
  "xl": {
    "justify-content": "flex-end",
  },
  "xs": {
    "justify-content": "flex-end",
  },
  "xxl": {
    "justify-content": "flex-start",
  },
}
`;

exports[`getAlignmentFlexStyles Get a correct alignment flex styles for a list 1`] = `
{
  "general": {
    "justify-content": "flex-end",
  },
  "l": {
    "justify-content": "center",
  },
  "xxl": {
    "justify-content": "center",
  },
}
`;
